--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>ForcePush</title>
+  <title>Force Consulting</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
